--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.container { 
+  max-width: 1280px;
+  margin: 2rem auto;
+}
+
